[gd_scene load_steps=39 format=3 uid="uid://1q71mi3al1as"]

[ext_resource type="Script" path="res://Scenes/Level/level.gd" id="1_yfd3r"]
[ext_resource type="PackedScene" uid="uid://dks8w6lf84vv0" path="res://Scenes/Level/MobSpawner.tscn" id="2_tr7wq"]
[ext_resource type="Texture2D" uid="uid://c3hw1siey4guf" path="res://Assets/Assets_road/Дорога_кривая.png" id="3_nbrci"]
[ext_resource type="Texture2D" uid="uid://e8lfhy08s7l6" path="res://Assets/Assets_road/Дорога_прямая.png" id="4_vx0tg"]
[ext_resource type="Texture2D" uid="uid://cdatj3pws7ly0" path="res://Assets/Assets_road/стена 1.png" id="5_3opko"]
[ext_resource type="Texture2D" uid="uid://dguab8tgnll16" path="res://Assets/Assets_road/Ворота.png" id="5_mch6w"]
[ext_resource type="Texture2D" uid="uid://d12jvha8vegp8" path="res://Assets/Assets_road/мусор_3.png" id="6_02jt2"]
[ext_resource type="Texture2D" uid="uid://cgy01g4ijc65e" path="res://Assets/Assets_road/целая стрела.png" id="6_gj2w1"]
[ext_resource type="Texture2D" uid="uid://ccjykhctcxnsg" path="res://Assets/Assets_road/фон сталактит.png" id="6_kmb6m"]
[ext_resource type="Texture2D" uid="uid://deije50xeah7s" path="res://Assets/Assets_road/разрушеная винница стена.png" id="7_ar1n3"]
[ext_resource type="Texture2D" uid="uid://bpwq2krxvf6ey" path="res://Assets/Assets_road/фон винница.png" id="7_pnky2"]
[ext_resource type="Texture2D" uid="uid://b7snwvpjli5tn" path="res://Assets/Assets_road/мусор_2.png" id="7_sklc6"]
[ext_resource type="PackedScene" uid="uid://cwcfvm81lh4hr" path="res://Scenes/Towers/towerPicker.tscn" id="8_7mxip"]
[ext_resource type="Texture2D" uid="uid://b303s4mt8tocc" path="res://Assets/Assets_road/Разрушеная мега балиста.png" id="8_votlo"]
[ext_resource type="Texture2D" uid="uid://lglyb0hmuimv" path="res://Assets/Assets_road/Мусор_1.png" id="8_yx4ul"]
[ext_resource type="Script" path="res://Scenes/Level/data_pad_label.gd" id="10_lmt4c"]
[ext_resource type="Texture2D" uid="uid://bsh82303oektu" path="res://Assets/Assets_road/фон неудача путника.png" id="11_3gfkk"]
[ext_resource type="Texture2D" uid="uid://mfjurv2sxdii" path="res://Assets/Assets_towers/иконка тмена 32х32.png" id="11_ftejx"]
[ext_resource type="Texture2D" uid="uid://cll0uohymrygl" path="res://Assets/Assets_road/стена знамя 1.png" id="13_7e3no"]
[ext_resource type="Script" path="res://Scenes/Level/rest_time.gd" id="17_u6nge"]
[ext_resource type="Script" path="res://Scenes/Level/dialogue_label.gd" id="20_mtfho"]
[ext_resource type="Theme" uid="uid://dmu2g6xloo11o" path="res://Scenes/Styles/Dwarven_theme.tres" id="21_fkbvw"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6nyw3"]
texture = ExtResource("3_nbrci")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m6rcq"]
texture = ExtResource("4_vx0tg")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gdfqs"]
texture = ExtResource("5_3opko")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3nknu"]
texture = ExtResource("6_gj2w1")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y144y"]
texture = ExtResource("7_ar1n3")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_whcao"]
texture = ExtResource("8_votlo")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u2j0f"]
texture = ExtResource("5_mch6w")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ncdsv"]
texture = ExtResource("6_kmb6m")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_squs4"]
texture = ExtResource("7_pnky2")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3fgqw"]
texture = ExtResource("6_02jt2")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_obhvx"]
texture = ExtResource("7_sklc6")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_85aik"]
texture = ExtResource("8_yx4ul")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6ivw7"]
texture = ExtResource("11_3gfkk")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ihcig"]
texture = ExtResource("13_7e3no")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_jlgoc"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_6nyw3")
sources/1 = SubResource("TileSetAtlasSource_m6rcq")
sources/2 = SubResource("TileSetAtlasSource_u2j0f")
sources/5 = SubResource("TileSetAtlasSource_3fgqw")
sources/6 = SubResource("TileSetAtlasSource_obhvx")
sources/7 = SubResource("TileSetAtlasSource_85aik")
sources/3 = SubResource("TileSetAtlasSource_ncdsv")
sources/4 = SubResource("TileSetAtlasSource_squs4")
sources/8 = SubResource("TileSetAtlasSource_6ivw7")
sources/9 = SubResource("TileSetAtlasSource_ihcig")
sources/10 = SubResource("TileSetAtlasSource_gdfqs")
sources/11 = SubResource("TileSetAtlasSource_3nknu")
sources/12 = SubResource("TileSetAtlasSource_y144y")
sources/13 = SubResource("TileSetAtlasSource_whcao")

[sub_resource type="Curve2D" id="Curve2D_gnm0b"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -32, 480, 0, 0, 0, 0, 1056, 480, 0, 0, 0, 0, 1056, 416, 0, 0, 0, 0, 1120, 416, 0, 0, 0, 0, 1120, 224, 0, 0, 0, 0, 32, 224, 0, 0, 0, 0, 32, 96, 0, 0, 0, 0, 152.709, 100.995, 0, 0, 0, 0, 992, 96, 0, 0, 0, 0, 988, -135)
}
point_count = 10

[node name="Level" type="Node2D"]
script = ExtResource("1_yfd3r")

[node name="MobSpawner" parent="." instance=ExtResource("2_tr7wq")]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -96.0
offset_top = -32.0
offset_right = 2644.0
offset_bottom = 1316.0
pivot_offset = Vector2(832, 64)
color = Color(0.333333, 0.333333, 0.333333, 1)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_jlgoc")
format = 2
layer_0/tile_data = PackedInt32Array(15, 2, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 196622, 1, 805306368, 196621, 1, 805306368, 196620, 1, 805306368, 196619, 1, 805306368, 196618, 1, 805306368, 196617, 1, 805306368, 196616, 1, 805306368, 196615, 1, 805306368, 196614, 1, 805306368, 196613, 1, 805306368, 196612, 1, 805306368, 196611, 1, 805306368, 196610, 1, 805306368, 196609, 1, 805306368, 196623, 1, 805306368, 196624, 1, 805306368, 196625, 0, 1610612736, 196608, 0, 1342177280, 65536, 0, 805306368, 65551, 0, 0, 131072, 1, 1610612736, 393233, 0, 0, 327697, 1, 1610612736, 262161, 1, 1610612736, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 0, 0, 393232, 0, 805306368, 458752, 1, 0, 327693, 8, 0, 262152, 8, 0, 393217, 3, 0, 131076, 4, 0, 131083, 4, 0, 131087, 4, 0, 327685, 3, 0, 262150, 3, 0, 393224, 3, 0, 262156, 4, 0, 131077, 3, 0, 327695, 3, 0, 131089, 3, 0, 262144, 3, 0, 589827, 8, 0, 589836, 3, 0, 589829, 0, 805306368, 589830, 1, 0, 589831, 3, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 655372, 1, 1342177280, 655365, 1, 1342177280, 524298, 3, 0, 14, 9, 0, 13, 11, 268435456, 11, 12, 0, 10, 10, 0, 4, 11, 268435456, 5, 10, 0, 2, 9, 0, 1, 11, 268435456, 12, 9, 0, 8, 9, 0, 3, 10, 0, 6, 9, 0, 17, 10, 0, 16, 9, 0, 0, 10, 0, 65555, 10, 0, 131091, 10, 0, 196627, 10, 0, 262163, 10, 0, 65560, 10, 0, 131096, 10, 0, 196632, 10, 0, 262168, 10, 0, 393235, 10, 0, 458771, 10, 0, 524307, 10, 0, 589843, 10, 0, 458773, 10, 0, 524309, 10, 0, 589845, 10, 0, 393240, 10, 0, 458776, 10, 0, 524312, 10, 0, 589848, 10, 0, 524313, 10, 0, 524314, 10, 0, 524315, 10, 0, 262170, 10, 0, 196634, 10, 0, 131098, 10, 0, 393237, 10, 0, 589854, 11, 0, 524318, 11, 0, 458782, 11, 0, 393246, 11, 0, 327711, 11, 0, 327712, 11, 0, 393249, 10, 0, 458785, 11, 0, 524321, 11, 0, 589857, 11, 0, 458783, 11, 0, 458784, 11, 0, 524319, 11, 0, 524320, 11, 0, 458781, 11, 0, 524317, 11, 0, 393247, 10, 0, 393248, 10, 0, 9, 11, 268435456, 524287, 0, 805306368, 720895, 0, 1342177280, 720901, 0, 0, 720896, 0, 1342177280, 655360, 0, 1610612736, 720908, 0, 0, 720907, 0, 805306368, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 589823, 1, 1610612736, 655359, 1, 1610612736, 786443, 1, 1610612736, 851979, 2, 805306368, 851978, 11, 805306368, 851980, 10, 805306368, 851977, 10, 805306368, 851981, 11, 805306368, 7, 13, 0)
layer_1/name = "Layer1"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(458754, 6, 0, 458757, 6, 0, 458759, 6, 0, 196618, 6, 0, 65545, 6, 1879048192, 65551, 6, 1879048192, 393233, 6, 536870912, 196614, 6, 0, 65539, 6, 0, 65547, 6, 805306368, 196608, 6, 805306368, 458760, 5, 1342177280, 196616, 5, 1610612736, 65546, 5, 1073741824, 65542, 5, 1342177280, 458758, 7, 0, 458761, 7, 0, 458765, 7, 0, 458767, 7, 0, 393232, 7, 1610612736, 65544, 7, 0, 65540, 7, 0, 65537, 7, 0, 131072, 7, 1610612736, 196611, 7, 805306368, 196619, 7, 805306368, 196624, 7, 805306368, 262161, 7, 1610612736, 196622, 6, 0, 196620, 6, 1342177280, 589833, 7, 0, 589835, 7, 0, 589829, 6, 1610612736, 589830, 6, 1342177280, 262146, 4, 0)

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_gnm0b")

[node name="enemies" type="Node" parent="."]

[node name="towers" type="Node" parent="."]
unique_name_in_owner = true

[node name="TowerPicker3" parent="towers" instance=ExtResource("8_7mxip")]
position = Vector2(672, 416)

[node name="TowerPicker" parent="towers" instance=ExtResource("8_7mxip")]
position = Vector2(544, 160)

[node name="TowerPicker2" parent="towers" instance=ExtResource("8_7mxip")]
position = Vector2(1056, 288)

[node name="TowerPicker4" parent="towers" instance=ExtResource("8_7mxip")]
position = Vector2(96, 160)

[node name="TowerPicker5" parent="towers" instance=ExtResource("8_7mxip")]
position = Vector2(992, 416)

[node name="TowerPicker6" parent="towers" instance=ExtResource("8_7mxip")]
position = Vector2(160, 544)

[node name="TowerPicker7" parent="towers" instance=ExtResource("8_7mxip")]
position = Vector2(1056, 96)

[node name="TowerPicker8" parent="towers" instance=ExtResource("8_7mxip")]
position = Vector2(352, 416)

[node name="TowerPicker9" parent="towers" instance=ExtResource("8_7mxip")]
position = Vector2(1408, 832)

[node name="TowerPicker10" parent="towers" instance=ExtResource("8_7mxip")]
position = Vector2(544, 544)

[node name="OreLabel" type="Label" parent="."]
offset_right = 96.0
offset_bottom = 32.0
text = "Ore:"
clip_text = true

[node name="DataPadLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 59.0
offset_top = 608.0
offset_right = 1120.0
offset_bottom = 649.0
text = "
"
script = ExtResource("10_lmt4c")

[node name="HideInfoButton" type="Button" parent="."]
visible = false
offset_left = -1.0
offset_top = 608.0
offset_right = 39.0
offset_bottom = 648.0
icon = ExtResource("11_ftejx")
flat = true

[node name="LivesLabel" type="Label" parent="."]
offset_left = 110.0
offset_right = 177.0
offset_bottom = 23.0

[node name="WaveLabel" type="Label" parent="."]
offset_left = 3.0
offset_top = 27.0
offset_right = 43.0
offset_bottom = 50.0

[node name="DialogueLabel" type="Label" parent="."]
visible = false
offset_left = 163.0
offset_top = 480.0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("20_mtfho")

[node name="SpeakerSprite2D" type="Sprite2D" parent="."]
visible = false

[node name="Window" type="Window" parent="."]
auto_translate_mode = 1
initial_position = 2
size = Vector2i(1000, 500)
borderless = true
script = ExtResource("17_u6nge")

[node name="ColorRect" type="ColorRect" parent="Window"]
offset_right = 1255.0
offset_bottom = 773.0
color = Color(0.26, 0.244833, 0.234, 1)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Window"]
offset_left = 222.0
offset_top = -2.0
offset_right = 722.0
offset_bottom = 163.0
theme = ExtResource("21_fkbvw")
theme_override_font_sizes/font_size = 120
text = "Rest Time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="digUpgradeButton" type="Button" parent="Window"]
offset_left = 420.0
offset_top = 252.0
offset_right = 514.0
offset_bottom = 283.0
theme = ExtResource("21_fkbvw")
text = "25 Upgrade"

[node name="oreButton" type="Button" parent="Window"]
offset_left = 433.0
offset_top = 284.0
offset_right = 498.0
offset_bottom = 315.0
theme = ExtResource("21_fkbvw")
text = "Dig +5"

[node name="megaCrystalButton" type="Button" parent="Window"]
offset_left = 380.0
offset_top = 317.0
offset_right = 580.0
offset_bottom = 348.0
theme = ExtResource("21_fkbvw")
text = "Repair wall vineyard 750"

[node name="megaBallistaButton" type="Button" parent="Window"]
offset_right = 8.0
offset_bottom = 8.0

[connection signal="endwave" from="MobSpawner" to="." method="_on_mob_spawner_endwave"]
[connection signal="pressed" from="HideInfoButton" to="DataPadLabel" method="_on_hide_info_button_pressed"]
[connection signal="visibility_changed" from="DialogueLabel" to="DialogueLabel" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="Window" to="Window" method="_on_visibility_changed"]
[connection signal="pressed" from="Window/digUpgradeButton" to="Window" method="_on_dig_upgrade_button_pressed"]
[connection signal="pressed" from="Window/oreButton" to="Window" method="_on_ore_button_pressed"]
[connection signal="pressed" from="Window/megaCrystalButton" to="Window" method="_on_mega_crystal_button_pressed"]
[connection signal="pressed" from="Window/megaBallistaButton" to="Window" method="_on_mega_ballista_button_pressed"]
